--- a/media-worker/package.json
+++ b/media-worker/package.json
@@ -33,6 +33,7 @@
     "@types/socket.io": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
